--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,6 @@
 <div class="jumbotron">
   <h2><%= gettext "Welcome to %{name}", name: "Pwiki!" %></h2>
   <p class="lead">A very informative wiki</p>
+  <p><a href="<%= page_path(@conn, :random) %>">Random article</a></p>
+
 </div>
